# pytorch_mingw

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  readme.txt
aten/src/ATen/: cwrap_parser.py
aten/src/ATen/core/: CMakeLists.txt
aten/src/ATen/native/quantized/cpu/qnnpack/: CMakeLists.txt
aten/src/TH/: THGeneral.h.in
c10/core/: CPUAllocator.cpp  GeneratorImpl.h
c10/macros/: Export.h
c10/util/: Logging.h  UniqueVoidPtr.h  logging_is_not_google_glog.h  typeid.cpp  typeid.h
caffe2/: CMakeLists.txt
caffe2/core/: module.cc
caffe2/distributed/: file_store_handler.cc
caffe2/perfkernels/: CMakeLists.txt
caffe2/proto/: CMakeLists.txt
caffe2/utils/threadpool/: WorkersPool.h
cmake/: Dependencies.cmake
cmake/Modules/: FindOpenBLAS.cmake
docs/: readme.txt
examples/: torch_mnist.py  var_back.py
examples/bpcv_cloths/: hm_gtk3_bpcv.py  hm_torch.cmd  imgstopbs.py  show_imgs.py  train_quick.py
examples/bpcv_cloths/mcvtorch/: mcv_threads.py
examples/bpcv_cloths/models/: bpcv_net_n1_04000.pth  bpcv_net_n2_02000.pth
examples/image_segmentation/: auto_encoder.py  gtk_mask_eval.py  gtk_mask_train_continue.py  gtk_mask_train_quick.py  imgs_comp_mask.py  mk_imgs_dirs.cmd  readme.md
examples/image_segmentation/models/: bpcv_encoder_12000.pth  bpcv_encoder_24000.pth
public/lmdb-0.95/: .gitignore  PKG-INFO  setup.py
public/lmdb-0.95/lmdb/: _config.py  cpython.c
public/lmdb-0.95/lmdb.egg-info/: SOURCES.txt
scripts/: build_windows.bat
tools/cwrap/: cwrap.py
torch/: CMakeLists.txt  __init__.py  __init__.pyi
torch/aten/: CMakeLists.txt
torch/aten/src/ATen/: CMakeLists.txt
torch/aten/src/ATen/test/: CMakeLists.txt
torch/aten/src/TH/: THGeneral.c  THGeneral.h.in  THTensorApply.h
torch/aten/src/TH/generic/: THTensorCopy.c  THTensorMath.c
torch/backends/cudnn/: __init__.py
torch/csrc/: Device.cpp  Dtype.cpp  Generator.cpp  Layout.cpp  MemoryFormat.cpp  Module.cpp  PtrWrapper.cpp  QScheme.cpp  TypeInfo.cpp  python_headers.h
torch/csrc/autograd/: python_engine.cpp  python_variable.cpp
torch/csrc/generic/: Storage.cpp  TensorMethods.cpp
torch/csrc/jit/codegen/fuser/cpu/: temp_file.h
torch/csrc/jit/frontend/: strtod.cpp
torch/csrc/jit/fuser/cpu/: temp_file.h
torch/csrc/jit/python/: python_custom_class.cpp
torch/csrc/jit/script/: strtod.cpp
torch/csrc/nn/: THCUNN.cpp  THCUNN.cwrap  THNN.cpp  THNN.cwrap
torch/csrc/utils/: throughput_benchmark.h
torch/lib/libshm_windows/: core.cpp
torch/libshm_windows/: CMakeLists.txt
torch/nanopb/: CMakeLists.txt
torch/nn/: functional.pyi
torch/nn/modules/: __init__.pyi  activation.pyi  adaptive.pyi  batchnorm.pyi  container.pyi  conv.pyi  distance.pyi  dropout.pyi  flatten.pyi  fold.pyi  instancenorm.pyi  linear.pyi  loss.pyi  module.pyi  normalization.pyi  padding.pyi  pixelshuffle.pyi  pooling.pyi  rnn.pyi  sparse.pyi  upsampling.pyi
torch/pytorch/: __init__.py  random.py  version.py
torch/pytorch/_thnn/: __init__.py
